<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/views_of_question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_one"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edit_text_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_one_hint"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/answer_status_question_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/radio_group_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_one"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio_button_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_two"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio_button_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_option_three"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:id="@+id/answer_status_question_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <RadioGroup
                android:id="@+id/radio_group_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_button_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_option_one"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio_button_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_option_two"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radio_button_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_option_three"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:id="@+id/answer_status_question_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_four"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/checkbox_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_four_option_one"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkbox_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_four_option_two"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkbox_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_four_option_three"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkbox_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_four_option_four"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/answer_status_question_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_five"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/checkbox_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_five_option_one"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkbox_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_five_option_two"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkbox_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_five_option_three"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkbox_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_five_option_four"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/answer_status_question_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswer"
                android:background="#CDDC39"
                android:text="@string/submit_button"
                android:fontFamily="sans-serif-medium" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="resetAnswer"
                android:background="#DCEDC8"
                android:text="@string/reset_button"
                android:fontFamily="sans-serif-medium"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>